# bot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LightsailDefaultKey-eu-west-1.pem  build.ps1  config.toml  deploy_vps.sh  docker-compose.yml  run.ps1
.cargo/: config.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Analyze.tsx  BotControl.tsx  LiveFeed.tsx  LogViewer.tsx  Login.tsx  Settings.tsx  StatsCards.tsx  TradesTable.tsx  WalletManager.tsx
frontend/src/hooks/: useApi.ts  useWebSocket.ts
migrations/: 001_init.sql  002_analytics.sql
src/: config.rs  db.rs  execution.rs  main.rs  models.rs  report.rs  simulator.rs  telegram.rs
src/api/: clob.rs  data.rs  gamma.rs  mod.rs
src/web/: auth.rs  log_layer.rs  mod.rs  routes.rs  state.rs  ws.rs
