[package]
name = "polymarket-copybot"
version = "0.2.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "json"] }
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client (for Polymarket API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Financial math
rust_decimal = { version = "1.36", features = ["serde-with-str"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database - PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Colored terminal output
colored = "2"

# Tabular output
comfy-table = "7"

# UUID for unique IDs
uuid = { version = "1", features = ["v4"] }

# Futures utilities
futures = "0.3"

# WebSocket client (for Polymarket RTDS real-time trades)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# URL encoding
urlencoding = "2"

# Polymarket CLOB SDK (real order execution)
polymarket-client-sdk = { version = "0.4", features = ["clob", "data"] }
alloy-primitives = "1"
k256 = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

[profile.release]
opt-level = 3
lto = "thin"
